﻿10.12 -> 10.13
XX/XX/2018

Balance:
 • Reverted the global 10% reclaimspeed nerf (see 10.00)

Other:
 • Fixed "Set Target Default" erroring at game start
 • "Contain mouse" option fixed and should show up in the options


10.11 -> 10.12
16/09/2018

IMPORTANT: Removed support for older engine versions, use 104.0.1.567 or newer.

Balance:
 • Testing splitting ballistic missiles for T2 missile ships (splits into 6 (arm) or 8(core) projectiles)
 • Continuous aiming: units readjust their aim much more often + start aiming when enemy is still at maxrange + 10%
 • EMP spider auto heals itself with 15hp per second (ba9.37 had 30 before it was removed)
 • Ships/Sea wrecks durability increased ("health" + 100%)
 • Floating mine AoE reduced 30%, damages to subs from 1750 -> 1100, edge effectiveness from 1.00 -> 0.65
 • Toaster range 1335 -> 1390, Ambusher range 1320 -> 1380
 • MERL range 1215 -> 1300, Diplomat range 1240 -> 1310

Other:
 • Engine replacement trees can be set on fire! The fire can propagate and even cause slight damages.
 • Added option "Resolution" (might freeze engine... in windowed mode)
 • Added option "Move Window Position"
 • Added option "Contain mouse"
 • Added option "Tree Wind" (before it was only active when barmodels enabled)
 • Added options "Camera smoothing" and "Tracking cam smoothing" slider
 • Camara tracking limits view to the tracked player's viewpoint and sight
 • Resource bars: low energy: red background tint, when overflowing: resource colored
 • Added lups thrusters to armatlas/corvalk/banshee
 • Added the "Traitor" award = destroying allied units.
 • Chat console background is back, toggle with /chatbackground
 • Renamed modoptions: removed 'mo_' prefix and change for chickens to 'chicken_'
 • Game info screen: grouped chicken modoptions, and hiding them when chickens disabled
 • Advplayerlist auto collapses, availible in options: Interface -> "Playerlist auto collapses"

Fixes: