@@ -864,8 +864,12 @@ function widgetHandler:UpdateCallIns()
   end
 end
 
-
 --------------------------------------------------------------------------------
+
+function widgetHandler:IsWidgetKnown(name)
+  return self.knownWidgets[name] and true or false
+end
+
 
 function widgetHandler:EnableWidget(name)
   local ki = self.knownWidgets[name]
